workin on fonts

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,3 +1,33 @@
+<div class ="hero">
+	<br />
+	<div class ="frosty col-10 offset-1 text-center">
+		<br />
+	<h1>Welcome Home Sweet Home</h1>
+	<br />
+
+	<h2>I'm The Home of Software</h2>
+</div>
+</div>
 <br />
-<div class ="booyah-box col-10 offset-1">
-	<h1>Welcome Home</h1>
+
+
+<br />
+<div class ="row feature text-center">
+	<div class ="col-12 col-sm">
+		<h3>Web Site</h3>
+		
+		<p>We build the best website in town</p>
+	</div>
+
+	<div class="col-12 col-sm">
+		<h3>Since 2000</h3>
+		
+		<p>We have been given great services for nearly twenty years.</p>
+	</div>
+
+	<div class="col-12 col-sm">
+		<h3>Awards</h3>
+		
+		<p>We have been voted number one for three consercutive years.</p>
+	</div>
+</div>
