--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
              <%= link_to new_home_path, class: 'nav-link' do %>
-              <i class="fa fa-plus-circle"></i>
+             <i class="fa fa-chevron-right"></i>
                 New Home
               <% end %>
           </li>
